deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: prezvim
  name: prezvim
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prezvim
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prezvim
    spec:
      containers:
      - image: qjoly/prezvim:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: prezvim
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
