deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prezvim
  name: prezvim
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: prezvim
  type: ClusterIP
