deployment/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prezvim
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - vim.avec.une-tasse-de.cafe
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - vim.avec.une-tasse-de.cafe
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: prezvim-tls
      mode: SIMPLE
